--- a/package.json
+++ b/package.json
@@ -4,27 +4,28 @@
     "private": true,
     "scripts": {
         "dev": "vite",
-        "build": "tsc && vite build",
+        "build": "vite build",
         "preview": "vite preview"
     },
     "dependencies": {
+        "framer-motion": "^10.16.4",
+        "lucide-react": "^0.284.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-router-dom": "^6.14.2",
-        "zmp-sdk": "latest",
-        "zmp-ui": "latest",
         "recoil": "^0.7.7",
-        "lucide-react": "^0.284.0",
-        "framer-motion": "^10.16.4"
+        "zmp-sdk": "latest",
+        "zmp-ui": "latest"
     },
     "devDependencies": {
         "@types/react": "^18.2.15",
         "@types/react-dom": "^18.2.7",
-        "@vitejs/plugin-react": "^4.0.3",
+        "@vitejs/plugin-react": "^3.1.0",
+        "@vitejs/plugin-react-swc": "^3.5.0",
         "autoprefixer": "^10.4.15",
         "postcss": "^8.4.28",
         "tailwindcss": "^3.3.3",
         "typescript": "^5.0.2",
-        "vite": "^4.4.5"
+        "vite": "^4.3.9"
     }
 }
